--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,111 +10,107 @@
         android:id="@+id/tv1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="456dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="8dp"
         android:text="Por densidad de pixeles(dp)"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/viewRoundPd2" />
 
     <TextView
         android:id="@+id/tv3"
-        android:layout_width="200dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="488dp"
         android:text="Lorem ipsum dolor sit amet consectetur adipiscing elit, torquent dapibus ornare posuere magna proin vehicula porttitor, fusce nunc ridiculus sem eleifend habitant. Pulvinar dignissim nisl ultricies torquent vel mi metus ridiculus penatibus, nullam pellentesque feugiat eget nulla fermentum dis sollicitudin, nec pharetra taciti rhoncus lobortis aenean a etiam. Nulla interdum ut eget sem turpis sagittis rutrum nam, condimentum orci venenatis facilisi vehicula luctus dapibus, etiam tempus enim egestas lectus class l"
         android:textSize="14dp"
+        app:layout_constraintEnd_toStartOf="@id/tv4"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/tv1" />
 
     <TextView
         android:id="@+id/tv4"
-        android:layout_width="200dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="488dp"
-        android:text="Lorem ipsum dolor sit amet consectetur adipiscing elit, torquent dapibus ornare posuere magna proin vehicula porttitor, fusce nunc ridiculus sem eleifend habitant. Pulvinar dignissim nisl ultricies torquent vel mi metus ridiculus penatibus, nullam pellentesque feugiat eget nulla fermentum dis sollicitudin, nec pharetra taciti rhoncus lobortis aenean a etiam. Nulla interdum ut eget sem turpis sagittis rutrum nam, condimentum orci venenatis facilisi vehicula luctus dapibus, etiam tempus enim egestas lectus class l"
+        android:text="Lorem ipsum dolor sit amet consectetur adipiscing elit, torquent dapibus ornare posuere magna proin vehicula porttitor, fusce nunc ridiculus sem eleifend habitant. Pulvinar dignissim nisl ultricies torquent vel mi metus ridiculus penatibus, nullam pellentesque feugiat eget nulla fermentum dis sollicitudin, nec pharetra taciti rhoncus lobortis aenean a etiam. Nulla interdum ut eget sem Pasando a la década de 1960, el Lorem Ipsum fue popularizado por el fabricante de tipografía Letraset, que lo utilizó en sus campañas publicitarias. Letraset ofrecía páginas de Lorem Ipsum como hojas de transferencia, que fueron ampliamente utilizadas en la era anterior a los ordenadores para los diseños. Estas páginas de transferencia, conocidas como Letraset Body Type, se incluyeron en la publicidad de la compañía y en su popular catálogo. El Lorem Ipsum fue reintroducido en la década de 1980 por Aldus Corporation, una empresa que desarrolló Software de Publicación de Escritorio. Su producto más conocido PageMaker viene con gráficos y plantillas de procesamiento de textos previamente instaladas que contienen una versión del lenguaje latín falso. turpis sagittis rutrum nam, condimentum orci venenatis facilisi vehicula luctus dapibus, etiam tempus enim egestas lectus class l"
         android:textSize="14px"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/tv3"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/tv3" />
 
     <View
         android:id="@+id/viewDp"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="16dp"
         android:background="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 
     <TextView
         android:id="@+id/tv2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="312dp"
-        android:layout_marginEnd="76dp"
+        android:layout_marginTop="104dp"
+        android:layout_marginEnd="132dp"
         android:text="Por pixeles"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/viewRoundPx2" />
 
     <View
         android:id="@+id/viewPx"
         android:layout_width="100px"
         android:layout_height="100px"
-        android:layout_marginTop="92dp"
-        android:layout_marginEnd="76dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="140dp"
         android:background="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
     <View
         android:id="@+id/viewRoundPd1"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginBottom="164dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/round"
-        app:layout_constraintBottom_toTopOf="@+id/tv1"
         app:layout_constraintEnd_toEndOf="@+id/viewDp"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/viewDp" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/viewDp"
+        app:layout_constraintTop_toBottomOf="@+id/viewDp" />
 
     <View
         android:id="@+id/viewRoundPd2"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/round_dp"
-        app:layout_constraintBottom_toTopOf="@+id/tv1"
         app:layout_constraintEnd_toEndOf="@+id/viewDp"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/viewDp" />
+        app:layout_constraintStart_toStartOf="@+id/viewDp"
+        app:layout_constraintTop_toBottomOf="@+id/viewRoundPd1" />
 
     <View
         android:id="@+id/viewRoundPx1"
         android:layout_width="100px"
         android:layout_height="100px"
+        android:layout_marginTop="44dp"
         android:background="@drawable/round"
-        app:layout_constraintBottom_toTopOf="@+id/tv2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/viewPx"
-        app:layout_constraintTop_toBottomOf="@+id/viewPx"
-        app:layout_constraintVertical_bias="0.513" />
+        app:layout_constraintTop_toBottomOf="@+id/viewPx" />
 
     <View
         android:id="@+id/viewRoundPx2"
         android:layout_width="100px"
         android:layout_height="100px"
+        android:layout_marginTop="40dp"
         android:background="@drawable/round_dp"
-        app:layout_constraintBottom_toTopOf="@+id/tv2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/viewPx"
-        app:layout_constraintTop_toBottomOf="@+id/viewPx"
-        app:layout_constraintVertical_bias="0.861" />
+        app:layout_constraintTop_toBottomOf="@+id/viewRoundPx1" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
